--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/releaseDate"
-                android:text="2nd October, 1869"
+                android:text="@string/dd_mm_yyyy"
                 android:layout_alignTop="@+id/posterImageView"
                 android:layout_toRightOf="@+id/posterImageView"
                 android:layout_toEndOf="@+id/posterImageView"
@@ -61,9 +61,9 @@
                 android:layout_below="@+id/releaseDate"
                 style="?android:attr/ratingBarStyleSmall"
                 android:isIndicator="true"
-                android:stepSize="0.25"
+                android:stepSize="1.25"
                 android:layout_marginTop="@dimen/detail_generic_spacing"
-                android:rating="5.0"/>
+                android:rating="10"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
                 android:layout_below="@+id/rating"
                 android:layout_alignLeft="@+id/rating"
                 android:layout_alignStart="@+id/rating"
-                android:text="7.6/10"/>
+                android:text="@string/rating_movie"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -82,7 +82,7 @@
                 android:layout_marginTop="@dimen/detail_generic_spacing"
                 android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="Lorem iasda sdakds akdsakd sdkads"/>
+                android:text="@string/synopsis"/>
 
 
 
