--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,42 +22,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  xmlns:app="http://schemas.android.com/apk/res-auto"
-                  android:orientation="horizontal"
-                  android:layout_width="match_parent"
-                  android:baselineAligned="false"
-                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                  android:layout_height="match_parent">
+    <include layout="@layout/content_main"/>
 
-        <fragment android:id="@+id/fragment"
-                  android:name="ege.popularmovies.MainActivityFragment"
-                  android:layout_width="0dp"
-                  android:layout_weight="1"
-                  android:layout_height="match_parent"
-                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                  tools:layout="@layout/fragment_main"/>
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"/>
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:id="@+id/detailContainer"
-            />
-
-    </LinearLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/btn_star_big_off"/>
 
 </android.support.design.widget.CoordinatorLayout>
