--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -1,5 +1,5 @@
 <fragment android:id="@+id/detailFragment"
-          android:name="ege.popularmovies.DetailActivityFragment"
+          android:name="ege.popularmovies.DetailFragment"
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools"
