--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -31,7 +31,7 @@
                   android:layout_height="match_parent">
 
         <fragment android:id="@+id/fragment"
-                  android:name="in.aviaryan.popularmovies.MainActivityFragment"
+                  android:name="ege.popularmovies.MainActivityFragment"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="match_parent"
